--- a/app/src/main/res/layout/layout_secondary.xml
+++ b/app/src/main/res/layout/layout_secondary.xml
@@ -4,25 +4,24 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <SearchView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-        </SearchView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Lollipop-lil"
+            android:textColor="#E87A3F"
+            android:textSize="26dp"
+            android:layout_weight="2"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_audiotrack_light" />
+
+
+
     </LinearLayout>
-
 
 
     <ImageView
@@ -30,8 +29,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_weight="5"
-        android:src="@drawable/photo" />
+        android:src="@drawable/photo"
+        android:layout_weight="4"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
