added authentication google and email

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,11 @@
 
 
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+    <Button
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/loggingout"
+        android:text="log me out" />
 
 
 
