--- a/app/src/main/res/layout/layout_secondary.xml
+++ b/app/src/main/res/layout/layout_secondary.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,14 +13,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="2"
             android:text="Lollipop-lil"
             android:textColor="#E87A3F"
-            android:textSize="26dp"
-            android:layout_weight="2"/>
-
-
-        
-
+            android:textSize="26dp" />
 
 
     </LinearLayout>
@@ -31,39 +27,41 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:src="@drawable/photo"
-        android:layout_weight="4"/>
+        android:layout_weight="4"
+        android:src="@drawable/photo" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_weight="2"
         android:background="@color/colorPrimary"
-        android:layout_weight="2">
+        android:orientation="horizontal">
 
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/back"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@drawable/back" />
 
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/mr_media_pause_light"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:layout_marginTop="5dp"/>
+            app:srcCompat="@drawable/mr_media_pause_light" />
+
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/mr_media_play_light"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:layout_marginTop="5dp"/>
+            app:srcCompat="@drawable/mr_media_play_light" />
+
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/frw"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@drawable/frw" />
     </LinearLayout>
 
 </LinearLayout>
