--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,13 @@
     </style>
 
     <style name="Theme">value</style>
+    <style name="dot_style">
+        <item name="android:layout_width">7dip</item>
+        <item name="android:layout_height">7dip</item>
+        <item name="android:background">@drawable/dot_normal</item>
+        <item name="android:layout_marginLeft">2dip</item>
+        <item name="android:layout_marginRight">2dip</item>
+    </style>
 
 
 </resources>
